[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/PlanetRadialGUI/PlanetRadialControl.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/LayerIcons/Liquid.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/LayerIcons/Lava.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/LayerIcons/Base.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/back.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/EventIcons/noise.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/EventIcons/fill.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/done.png" type="Texture" id=8]
[ext_resource path="res://GUI/PlanetRadialGUI/ButtonNormalBoxFlat.tres" type="StyleBox" id=9]
[ext_resource path="res://GUI/PlanetRadialGUI/ButtonPressedBoxFlat.tres" type="StyleBox" id=10]
[ext_resource path="res://GUI/PlanetRadialGUI/ButtonHoverBoxFlat.tres" type="StyleBox" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.168627, 0.168627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.47451, 0.47451, 0.47451, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="PlanetRadialControl" type="Control"]
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="StartButtons" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="StartButtons"]
margin_left = -163.828
margin_top = 85.92
margin_right = -87.8276
margin_bottom = 155.92
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="StartButtons"]
margin_left = -78.749
margin_top = 99.0419
margin_right = 5.25104
margin_bottom = 169.042
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
text = "Add Event"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlternateView" type="Button" parent="StartButtons"]
margin_left = 9.10974
margin_top = 98.1846
margin_right = 122.11
margin_bottom = 168.185
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
text = "Alternate View"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerButtons" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="LayerButtons"]
margin_left = -167.327
margin_top = 5.4415
margin_right = -91.3267
margin_bottom = 75.4415
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Button" parent="LayerButtons"]
margin_left = -81.9832
margin_top = 6.80188
margin_right = -5.98315
margin_bottom = 76.8019
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Liquid" type="Button" parent="LayerButtons"]
margin_left = -4.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 91.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lava" type="Button" parent="LayerButtons"]
margin_left = 102.831
margin_top = 11.1027
margin_right = 186.831
margin_bottom = 95.1027
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventButtons" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="EventButtons"]
margin_left = -165.966
margin_top = -70.7397
margin_right = -89.9662
margin_bottom = -0.739746
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill" type="Button" parent="EventButtons"]
margin_left = -81.6228
margin_top = -70.7397
margin_right = -5.6228
margin_bottom = -0.739746
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Noise" type="Button" parent="EventButtons"]
margin_left = -1.36035
margin_top = -72.1001
margin_right = 74.6396
margin_bottom = -2.10013
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FillButtons" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="FillButtons"]
margin_left = -166.299
margin_top = -157.467
margin_right = -90.2991
margin_bottom = -87.4673
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="FillButtons"]
margin_left = -76.3215
margin_top = -157.966
margin_right = -6.32153
margin_bottom = -87.9664
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="FillButtons"]
margin_left = 1.99994
margin_top = -159.001
margin_right = 77.9999
margin_bottom = -89.0007
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoiseButtons" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="NoiseButtons"]
margin_left = -168.632
margin_top = -242.611
margin_right = -92.6318
margin_bottom = -172.611
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Period" type="Control" parent="NoiseButtons"]
margin_left = -61.9888
margin_top = -225.279
margin_right = -21.9888
margin_bottom = -185.279
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="NoiseButtons/Period"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NoiseButtons/Period/HBoxContainer"]
margin_top = 13.0
margin_right = 41.0
margin_bottom = 27.0
text = "Period"

[node name="HSlider" type="HSlider" parent="NoiseButtons/Period/HBoxContainer"]
margin_left = 45.0
margin_right = 145.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
custom_styles/slider = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Octave" type="Control" parent="NoiseButtons"]
margin_left = 101.473
margin_top = -223.94
margin_right = 141.473
margin_bottom = -183.94
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="NoiseButtons/Octave"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 109.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NoiseButtons/Octave/HBoxContainer"]
margin_top = 11.0
margin_right = 45.0
margin_bottom = 25.0
text = "Octave"

[node name="HSlider" type="HSlider" parent="NoiseButtons/Octave/HBoxContainer"]
margin_left = 49.0
margin_right = 149.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
custom_styles/slider = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="NoiseButtons"]
margin_left = 265.927
margin_top = -232.021
margin_right = 335.927
margin_bottom = -162.021
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Done" type="Button" parent="NoiseButtons"]
margin_left = 366.001
margin_top = -233.001
margin_right = 442.001
margin_bottom = -163.001
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
